decaf_PA1A/src/decaf/frontend/Parser.output
   0  $accept : Program $end

   1  Program : ClassList

   2  ClassList : ClassList ClassDef
   3            | ClassDef

   4  VariableDef : Variable ';'

   5  Variable : Type IDENTIFIER

   6  Type : INT
   7       | VOID
   8       | BOOL
   9       | STRING
  10       | CLASS IDENTIFIER
  11       | Type '[' ']'

  12  ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}'
  13           | SEALED CLASS IDENTIFIER ExtendsClause '{' FieldList '}'

  14  ExtendsClause : EXTENDS IDENTIFIER
  15                |

  16  FieldList : FieldList VariableDef
  17            | FieldList FunctionDef
  18            |

  19  Formals : VariableList
  20          |

  21  VariableList : VariableList ',' Variable
  22               | Variable

  23  FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock
  24              | Type IDENTIFIER '(' Formals ')' StmtBlock

  25  StmtBlock : '{' StmtList '}'

  26  StmtList : StmtList Stmt
  27           |

  28  Stmt : VariableDef
  29       | SimpleStmt ';'
  30       | IfStmt
  31       | WhileStmt
  32       | ForStmt
  33       | ReturnStmt ';'
  34       | PrintStmt ';'
  35       | BreakStmt ';'
  36       | StmtBlock
  37       | OCStmt ';'
  38       | GuardedStmt
  39       | ForeachStmt

  40  GuardedStmt : IF '{' IfBranchStar IfSubStmt '}'
  41              | IF '{' '}'

  42  ForeachStmt : FOREACH '(' BoundVariable IN Expr ForeachIf ')' Stmt

  43  BoundVariable : VAR IDENTIFIER
  44                | Type IDENTIFIER

  45  ForeachIf : WHILE Expr
  46            |

  47  IfBranchStar : IfBranchStar IfBranch
  48               |

  49  IfBranch : IfSubStmt TRIPIPE

  50  IfSubStmt : Expr ':' Stmt

  51  OCStmt : SCOPY '(' LValue ',' Expr ')'

  52  SimpleStmt : LValue '=' Expr
  53             | Call
  54             |

  55  Receiver : Expr '.'
  56           |

  57  LValue : Receiver IDENTIFIER
  58         | VAR IDENTIFIER
  59         | Expr '[' Expr ']'

  60  Call : Receiver IDENTIFIER '(' Actuals ')'

  61  Expr : LValue
  62       | Call
  63       | Constant
  64       | Expr '+' Expr
  65       | Expr '-' Expr
  66       | Expr '*' Expr
  67       | Expr '/' Expr
  68       | Expr '%' Expr
  69       | Expr EQUAL Expr
  70       | Expr NOT_EQUAL Expr
  71       | Expr '<' Expr
  72       | Expr '>' Expr
  73       | Expr LESS_EQUAL Expr
  74       | Expr GREATER_EQUAL Expr
  75       | Expr AND Expr
  76       | Expr OR Expr
  77       | '(' Expr ')'
  78       | '-' Expr
  79       | '!' Expr
  80       | READ_INTEGER '(' ')'
  81       | READ_LINE '(' ')'
  82       | THIS
  83       | NEW IDENTIFIER '(' ')'
  84       | NEW Type '[' Expr ']'
  85       | INSTANCEOF '(' Expr ',' IDENTIFIER ')'
  86       | '(' CLASS IDENTIFIER ')' Expr
  87       | Expr REPEAT Expr
  88       | Expr CONCAT Expr
  89       | '[' Expr FOR IDENTIFIER IN Expr COMPIF ']'
  90       | Expr '[' Expr ']' DEFAULT Expr
  91       | Expr '[' Expr ':' Expr ']'

  92  COMPIF : IF Expr
  93         |

  94  Constant : LITERAL
  95           | NULL
  96           | ArrayConstant

  97  ArrayConstant : '[' ConstantStar ']'
  98                | '[' ']'

  99  ConstantStar : ConstantStar ',' Constant
 100               | Constant

 101  Actuals : ExprList
 102          |

 103  ExprList : ExprList ',' Expr
 104           | Expr

 105  WhileStmt : WHILE '(' Expr ')' Stmt

 106  ForStmt : FOR '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt

 107  BreakStmt : BREAK

 108  IfStmt : IF '(' Expr ')' Stmt ElseClause

 109  ElseClause : ELSE Stmt
 110             |

 111  ReturnStmt : RETURN Expr
 112             | RETURN

 113  PrintStmt : PRINT '(' ExprList ')'

state 0
	$accept : . Program $end  (0)

	CLASS  shift 1
	SEALED  shift 2
	.  error

	Program  goto 3
	ClassList  goto 4
	ClassDef  goto 5


state 1
	ClassDef : CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (12)

	IDENTIFIER  shift 6
	.  error


state 2
	ClassDef : SEALED . CLASS IDENTIFIER ExtendsClause '{' FieldList '}'  (13)

	CLASS  shift 7
	.  error


state 3
	$accept : Program . $end  (0)

	$end  accept


state 4
	Program : ClassList .  (1)
	ClassList : ClassList . ClassDef  (2)

	CLASS  shift 1
	SEALED  shift 2
	$end  reduce 1

	ClassDef  goto 8


state 5
	ClassList : ClassDef .  (3)

	.  reduce 3


state 6
	ClassDef : CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (12)
	ExtendsClause : .  (15)

	EXTENDS  shift 9
	'{'  reduce 15

	ExtendsClause  goto 10


state 7
	ClassDef : SEALED CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (13)

	IDENTIFIER  shift 11
	.  error


state 8
	ClassList : ClassList ClassDef .  (2)

	.  reduce 2


state 9
	ExtendsClause : EXTENDS . IDENTIFIER  (14)

	IDENTIFIER  shift 12
	.  error


state 10
	ClassDef : CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (12)

	'{'  shift 13
	.  error


state 11
	ClassDef : SEALED CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (13)
	ExtendsClause : .  (15)

	EXTENDS  shift 9
	'{'  reduce 15

	ExtendsClause  goto 14


state 12
	ExtendsClause : EXTENDS IDENTIFIER .  (14)

	.  reduce 14


state 13
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (12)
	FieldList : .  (18)

	.  reduce 18

	FieldList  goto 15


state 14
	ClassDef : SEALED CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (13)

	'{'  shift 16
	.  error


state 15
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (12)
	FieldList : FieldList . VariableDef  (16)
	FieldList : FieldList . FunctionDef  (17)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	STATIC  shift 22
	'}'  shift 23
	.  error

	VariableDef  goto 24
	Variable  goto 25
	Type  goto 26
	FunctionDef  goto 27


state 16
	ClassDef : SEALED CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (13)
	FieldList : .  (18)

	.  reduce 18

	FieldList  goto 28


state 17
	Type : VOID .  (7)

	.  reduce 7


state 18
	Type : BOOL .  (8)

	.  reduce 8


state 19
	Type : INT .  (6)

	.  reduce 6


state 20
	Type : STRING .  (9)

	.  reduce 9


state 21
	Type : CLASS . IDENTIFIER  (10)

	IDENTIFIER  shift 29
	.  error


state 22
	FunctionDef : STATIC . Type IDENTIFIER '(' Formals ')' StmtBlock  (23)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	.  error

	Type  goto 30


state 23
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (12)

	.  reduce 12


state 24
	FieldList : FieldList VariableDef .  (16)

	.  reduce 16


state 25
	VariableDef : Variable . ';'  (4)

	';'  shift 31
	.  error


state 26
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)
	FunctionDef : Type . IDENTIFIER '(' Formals ')' StmtBlock  (24)

	IDENTIFIER  shift 32
	'['  shift 33
	.  error


state 27
	FieldList : FieldList FunctionDef .  (17)

	.  reduce 17


state 28
	ClassDef : SEALED CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (13)
	FieldList : FieldList . VariableDef  (16)
	FieldList : FieldList . FunctionDef  (17)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	STATIC  shift 22
	'}'  shift 34
	.  error

	VariableDef  goto 24
	Variable  goto 25
	Type  goto 26
	FunctionDef  goto 27


state 29
	Type : CLASS IDENTIFIER .  (10)

	.  reduce 10


state 30
	Type : Type . '[' ']'  (11)
	FunctionDef : STATIC Type . IDENTIFIER '(' Formals ')' StmtBlock  (23)

	IDENTIFIER  shift 35
	'['  shift 33
	.  error


state 31
	VariableDef : Variable ';' .  (4)

	.  reduce 4


state 32
	Variable : Type IDENTIFIER .  (5)
	FunctionDef : Type IDENTIFIER . '(' Formals ')' StmtBlock  (24)

	'('  shift 36
	';'  reduce 5


state 33
	Type : Type '[' . ']'  (11)

	']'  shift 37
	.  error


state 34
	ClassDef : SEALED CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (13)

	.  reduce 13


state 35
	FunctionDef : STATIC Type IDENTIFIER . '(' Formals ')' StmtBlock  (23)

	'('  shift 38
	.  error


state 36
	FunctionDef : Type IDENTIFIER '(' . Formals ')' StmtBlock  (24)
	Formals : .  (20)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	')'  reduce 20

	Variable  goto 39
	Type  goto 40
	Formals  goto 41
	VariableList  goto 42


state 37
	Type : Type '[' ']' .  (11)

	.  reduce 11


state 38
	FunctionDef : STATIC Type IDENTIFIER '(' . Formals ')' StmtBlock  (23)
	Formals : .  (20)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	')'  reduce 20

	Variable  goto 39
	Type  goto 40
	Formals  goto 43
	VariableList  goto 42


state 39
	VariableList : Variable .  (22)

	.  reduce 22


state 40
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)

	IDENTIFIER  shift 44
	'['  shift 33
	.  error


state 41
	FunctionDef : Type IDENTIFIER '(' Formals . ')' StmtBlock  (24)

	')'  shift 45
	.  error


state 42
	Formals : VariableList .  (19)
	VariableList : VariableList . ',' Variable  (21)

	','  shift 46
	')'  reduce 19


state 43
	FunctionDef : STATIC Type IDENTIFIER '(' Formals . ')' StmtBlock  (23)

	')'  shift 47
	.  error


state 44
	Variable : Type IDENTIFIER .  (5)

	.  reduce 5


state 45
	FunctionDef : Type IDENTIFIER '(' Formals ')' . StmtBlock  (24)

	'{'  shift 48
	.  error

	StmtBlock  goto 49


state 46
	VariableList : VariableList ',' . Variable  (21)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	.  error

	Variable  goto 50
	Type  goto 40


state 47
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' . StmtBlock  (23)

	'{'  shift 48
	.  error

	StmtBlock  goto 51


state 48
	StmtBlock : '{' . StmtList '}'  (25)
	StmtList : .  (27)

	.  reduce 27

	StmtList  goto 52


state 49
	FunctionDef : Type IDENTIFIER '(' Formals ')' StmtBlock .  (24)

	.  reduce 24


state 50
	VariableList : VariableList ',' Variable .  (21)

	.  reduce 21


state 51
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock .  (23)

	.  reduce 23


state 52
	StmtBlock : '{' StmtList . '}'  (25)
	StmtList : StmtList . Stmt  (26)
	SimpleStmt : .  (54)
	Receiver : .  (56)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	NULL  shift 53
	THIS  shift 54
	WHILE  shift 55
	FOR  shift 56
	IF  shift 57
	RETURN  shift 58
	BREAK  shift 59
	NEW  shift 60
	SCOPY  shift 61
	VAR  shift 62
	FOREACH  shift 63
	PRINT  shift 64
	READ_INTEGER  shift 65
	READ_LINE  shift 66
	LITERAL  shift 67
	INSTANCEOF  shift 68
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	'['  shift 72
	'{'  shift 48
	'}'  shift 73
	IDENTIFIER  reduce 56
	';'  reduce 54

	VariableDef  goto 74
	Variable  goto 25
	Type  goto 40
	StmtBlock  goto 75
	Stmt  goto 76
	SimpleStmt  goto 77
	IfStmt  goto 78
	WhileStmt  goto 79
	ForStmt  goto 80
	ReturnStmt  goto 81
	PrintStmt  goto 82
	BreakStmt  goto 83
	OCStmt  goto 84
	GuardedStmt  goto 85
	ForeachStmt  goto 86
	Expr  goto 87
	LValue  goto 88
	Call  goto 89
	Receiver  goto 90
	Constant  goto 91
	ArrayConstant  goto 92


state 53
	Constant : NULL .  (95)

	.  reduce 95


state 54
	Expr : THIS .  (82)

	.  reduce 82


state 55
	WhileStmt : WHILE . '(' Expr ')' Stmt  (105)

	'('  shift 93
	.  error


state 56
	ForStmt : FOR . '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (106)

	'('  shift 94
	.  error


state 57
	GuardedStmt : IF . '{' IfBranchStar IfSubStmt '}'  (40)
	GuardedStmt : IF . '{' '}'  (41)
	IfStmt : IF . '(' Expr ')' Stmt ElseClause  (108)

	'('  shift 95
	'{'  shift 96
	.  error


state 58
	ReturnStmt : RETURN . Expr  (111)
	ReturnStmt : RETURN .  (112)
	Receiver : .  (56)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	VAR  shift 62
	READ_INTEGER  shift 65
	READ_LINE  shift 66
	LITERAL  shift 67
	INSTANCEOF  shift 68
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	'['  shift 72
	IDENTIFIER  reduce 56
	';'  reduce 112

	Expr  goto 97
	LValue  goto 98
	Call  goto 99
	Receiver  goto 90
	Constant  goto 91
	ArrayConstant  goto 92


state 59
	BreakStmt : BREAK .  (107)

	.  reduce 107


state 60
	Expr : NEW . IDENTIFIER '(' ')'  (83)
	Expr : NEW . Type '[' Expr ']'  (84)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	IDENTIFIER  shift 100
	.  error

	Type  goto 101


state 61
	OCStmt : SCOPY . '(' LValue ',' Expr ')'  (51)

	'('  shift 102
	.  error


state 62
	LValue : VAR . IDENTIFIER  (58)

	IDENTIFIER  shift 103
	.  error


state 63
	ForeachStmt : FOREACH . '(' BoundVariable IN Expr ForeachIf ')' Stmt  (42)

	'('  shift 104
	.  error


state 64
	PrintStmt : PRINT . '(' ExprList ')'  (113)

	'('  shift 105
	.  error


state 65
	Expr : READ_INTEGER . '(' ')'  (80)

	'('  shift 106
	.  error


state 66
	Expr : READ_LINE . '(' ')'  (81)

	'('  shift 107
	.  error


state 67
	Constant : LITERAL .  (94)

	.  reduce 94


state 68
	Expr : INSTANCEOF . '(' Expr ',' IDENTIFIER ')'  (85)

	'('  shift 108
	.  error


state 69
	Expr : '-' . Expr  (78)
	Receiver : .  (56)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	VAR  shift 62
	READ_INTEGER  shift 65
	READ_LINE  shift 66
	LITERAL  shift 67
	INSTANCEOF  shift 68
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	'['  shift 72
	IDENTIFIER  reduce 56

	Expr  goto 109
	LValue  goto 98
	Call  goto 99
	Receiver  goto 90
	Constant  goto 91
	ArrayConstant  goto 92


state 70
	Expr : '!' . Expr  (79)
	Receiver : .  (56)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	VAR  shift 62
	READ_INTEGER  shift 65
	READ_LINE  shift 66
	LITERAL  shift 67
	INSTANCEOF  shift 68
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	'['  shift 72
	IDENTIFIER  reduce 56

	Expr  goto 110
	LValue  goto 98
	Call  goto 99
	Receiver  goto 90
	Constant  goto 91
	ArrayConstant  goto 92


state 71
	Expr : '(' . Expr ')'  (77)
	Expr : '(' . CLASS IDENTIFIER ')' Expr  (86)
	Receiver : .  (56)

	CLASS  shift 111
	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	VAR  shift 62
	READ_INTEGER  shift 65
	READ_LINE  shift 66
	LITERAL  shift 67
	INSTANCEOF  shift 68
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	'['  shift 72
	IDENTIFIER  reduce 56

	Expr  goto 112
	LValue  goto 98
	Call  goto 99
	Receiver  goto 90
	Constant  goto 91
	ArrayConstant  goto 92


state 72
	Expr : '[' . Expr FOR IDENTIFIER IN Expr COMPIF ']'  (89)
	ArrayConstant : '[' . ConstantStar ']'  (97)
	ArrayConstant : '[' . ']'  (98)
	Receiver : .  (56)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	VAR  shift 62
	READ_INTEGER  shift 65
	READ_LINE  shift 66
	LITERAL  shift 67
	INSTANCEOF  shift 68
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	'['  shift 72
	']'  shift 113
	IDENTIFIER  reduce 56

	Expr  goto 114
	LValue  goto 98
	Call  goto 99
	Receiver  goto 90
	Constant  goto 115
	ArrayConstant  goto 92
	ConstantStar  goto 116


state 73
	StmtBlock : '{' StmtList '}' .  (25)

	.  reduce 25


state 74
	Stmt : VariableDef .  (28)

	.  reduce 28


state 75
	Stmt : StmtBlock .  (36)

	.  reduce 36


state 76
	StmtList : StmtList Stmt .  (26)

	.  reduce 26


state 77
	Stmt : SimpleStmt . ';'  (29)

	';'  shift 117
	.  error


state 78
	Stmt : IfStmt .  (30)

	.  reduce 30


state 79
	Stmt : WhileStmt .  (31)

	.  reduce 31


state 80
	Stmt : ForStmt .  (32)

	.  reduce 32


state 81
	Stmt : ReturnStmt . ';'  (33)

	';'  shift 118
	.  error


state 82
	Stmt : PrintStmt . ';'  (34)

	';'  shift 119
	.  error


state 83
	Stmt : BreakStmt . ';'  (35)

	';'  shift 120
	.  error


state 84
	Stmt : OCStmt . ';'  (37)

	';'  shift 121
	.  error


state 85
	Stmt : GuardedStmt .  (38)

	.  reduce 38


state 86
	Stmt : ForeachStmt .  (39)

	.  reduce 39


state 87
	Receiver : Expr . '.'  (55)
	LValue : Expr . '[' Expr ']'  (59)
	Expr : Expr . '+' Expr  (64)
	Expr : Expr . '-' Expr  (65)
	Expr : Expr . '*' Expr  (66)
	Expr : Expr . '/' Expr  (67)
	Expr : Expr . '%' Expr  (68)
	Expr : Expr . EQUAL Expr  (69)
	Expr : Expr . NOT_EQUAL Expr  (70)
	Expr : Expr . '<' Expr  (71)
	Expr : Expr . '>' Expr  (72)
	Expr : Expr . LESS_EQUAL Expr  (73)
	Expr : Expr . GREATER_EQUAL Expr  (74)
	Expr : Expr . AND Expr  (75)
	Expr : Expr . OR Expr  (76)
	Expr : Expr . REPEAT Expr  (87)
	Expr : Expr . CONCAT Expr  (88)
	Expr : Expr . '[' Expr ']' DEFAULT Expr  (90)
	Expr : Expr . '[' Expr ':' Expr ']'  (91)

	REPEAT  shift 122
	CONCAT  shift 123
	AND  shift 124
	OR  shift 125
	LESS_EQUAL  shift 126
	GREATER_EQUAL  shift 127
	EQUAL  shift 128
	NOT_EQUAL  shift 129
	'+'  shift 130
	'-'  shift 131
	'*'  shift 132
	'/'  shift 133
	'%'  shift 134
	'>'  shift 135
	'<'  shift 136
	'.'  shift 137
	'['  shift 138
	.  error


state 88
	SimpleStmt : LValue . '=' Expr  (52)
	Expr : LValue .  (61)

	'='  shift 139
	REPEAT  reduce 61
	CONCAT  reduce 61
	AND  reduce 61
	OR  reduce 61
	LESS_EQUAL  reduce 61
	GREATER_EQUAL  reduce 61
	EQUAL  reduce 61
	NOT_EQUAL  reduce 61
	'+'  reduce 61
	'-'  reduce 61
	'*'  reduce 61
	'/'  reduce 61
	'%'  reduce 61
	'>'  reduce 61
	'<'  reduce 61
	'.'  reduce 61
	'['  reduce 61


state 89
	SimpleStmt : Call .  (53)
	Expr : Call .  (62)

	REPEAT  reduce 62
	CONCAT  reduce 62
	AND  reduce 62
	OR  reduce 62
	LESS_EQUAL  reduce 62
	GREATER_EQUAL  reduce 62
	EQUAL  reduce 62
	NOT_EQUAL  reduce 62
	'+'  reduce 62
	'-'  reduce 62
	'*'  reduce 62
	'/'  reduce 62
	'%'  reduce 62
	'>'  reduce 62
	'<'  reduce 62
	'.'  reduce 62
	';'  reduce 53
	')'  reduce 53
	'['  reduce 62


state 90
	LValue : Receiver . IDENTIFIER  (57)
	Call : Receiver . IDENTIFIER '(' Actuals ')'  (60)

	IDENTIFIER  shift 140
	.  error


state 91
	Expr : Constant .  (63)

	.  reduce 63


state 92
	Constant : ArrayConstant .  (96)

	.  reduce 96


state 93
	WhileStmt : WHILE '(' . Expr ')' Stmt  (105)
	Receiver : .  (56)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	VAR  shift 62
	READ_INTEGER  shift 65
	READ_LINE  shift 66
	LITERAL  shift 67
	INSTANCEOF  shift 68
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	'['  shift 72
	IDENTIFIER  reduce 56

	Expr  goto 141
	LValue  goto 98
	Call  goto 99
	Receiver  goto 90
	Constant  goto 91
	ArrayConstant  goto 92


state 94
	ForStmt : FOR '(' . SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (106)
	SimpleStmt : .  (54)
	Receiver : .  (56)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	VAR  shift 62
	READ_INTEGER  shift 65
	READ_LINE  shift 66
	LITERAL  shift 67
	INSTANCEOF  shift 68
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	'['  shift 72
	IDENTIFIER  reduce 56
	';'  reduce 54

	SimpleStmt  goto 142
	Expr  goto 87
	LValue  goto 88
	Call  goto 89
	Receiver  goto 90
	Constant  goto 91
	ArrayConstant  goto 92


state 95
	IfStmt : IF '(' . Expr ')' Stmt ElseClause  (108)
	Receiver : .  (56)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	VAR  shift 62
	READ_INTEGER  shift 65
	READ_LINE  shift 66
	LITERAL  shift 67
	INSTANCEOF  shift 68
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	'['  shift 72
	IDENTIFIER  reduce 56

	Expr  goto 143
	LValue  goto 98
	Call  goto 99
	Receiver  goto 90
	Constant  goto 91
	ArrayConstant  goto 92


state 96
	GuardedStmt : IF '{' . IfBranchStar IfSubStmt '}'  (40)
	GuardedStmt : IF '{' . '}'  (41)
	IfBranchStar : .  (48)

	'}'  shift 144
	NULL  reduce 48
	THIS  reduce 48
	NEW  reduce 48
	VAR  reduce 48
	READ_INTEGER  reduce 48
	READ_LINE  reduce 48
	LITERAL  reduce 48
	IDENTIFIER  reduce 48
	INSTANCEOF  reduce 48
	'-'  reduce 48
	'!'  reduce 48
	'('  reduce 48
	'['  reduce 48

	IfBranchStar  goto 145


state 97
	Receiver : Expr . '.'  (55)
	LValue : Expr . '[' Expr ']'  (59)
	Expr : Expr . '+' Expr  (64)
	Expr : Expr . '-' Expr  (65)
	Expr : Expr . '*' Expr  (66)
	Expr : Expr . '/' Expr  (67)
	Expr : Expr . '%' Expr  (68)
	Expr : Expr . EQUAL Expr  (69)
	Expr : Expr . NOT_EQUAL Expr  (70)
	Expr : Expr . '<' Expr  (71)
	Expr : Expr . '>' Expr  (72)
	Expr : Expr . LESS_EQUAL Expr  (73)
	Expr : Expr . GREATER_EQUAL Expr  (74)
	Expr : Expr . AND Expr  (75)
	Expr : Expr . OR Expr  (76)
	Expr : Expr . REPEAT Expr  (87)
	Expr : Expr . CONCAT Expr  (88)
	Expr : Expr . '[' Expr ']' DEFAULT Expr  (90)
	Expr : Expr . '[' Expr ':' Expr ']'  (91)
	ReturnStmt : RETURN Expr .  (111)

	REPEAT  shift 122
	CONCAT  shift 123
	AND  shift 124
	OR  shift 125
	LESS_EQUAL  shift 126
	GREATER_EQUAL  shift 127
	EQUAL  shift 128
	NOT_EQUAL  shift 129
	'+'  shift 130
	'-'  shift 131
	'*'  shift 132
	'/'  shift 133
	'%'  shift 134
	'>'  shift 135
	'<'  shift 136
	'.'  shift 137
	'['  shift 138
	';'  reduce 111


state 98
	Expr : LValue .  (61)

	.  reduce 61


state 99
	Expr : Call .  (62)

	.  reduce 62


state 100
	Expr : NEW IDENTIFIER . '(' ')'  (83)

	'('  shift 146
	.  error


state 101
	Type : Type . '[' ']'  (11)
	Expr : NEW Type . '[' Expr ']'  (84)

	'['  shift 147
	.  error


state 102
	OCStmt : SCOPY '(' . LValue ',' Expr ')'  (51)
	Receiver : .  (56)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	VAR  shift 62
	READ_INTEGER  shift 65
	READ_LINE  shift 66
	LITERAL  shift 67
	INSTANCEOF  shift 68
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	'['  shift 72
	IDENTIFIER  reduce 56

	Expr  goto 87
	LValue  goto 148
	Call  goto 99
	Receiver  goto 90
	Constant  goto 91
	ArrayConstant  goto 92


state 103
	LValue : VAR IDENTIFIER .  (58)

	.  reduce 58


state 104
	ForeachStmt : FOREACH '(' . BoundVariable IN Expr ForeachIf ')' Stmt  (42)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	VAR  shift 149
	.  error

	Type  goto 150
	BoundVariable  goto 151


state 105
	PrintStmt : PRINT '(' . ExprList ')'  (113)
	Receiver : .  (56)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	VAR  shift 62
	READ_INTEGER  shift 65
	READ_LINE  shift 66
	LITERAL  shift 67
	INSTANCEOF  shift 68
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	'['  shift 72
	IDENTIFIER  reduce 56

	Expr  goto 152
	LValue  goto 98
	Call  goto 99
	Receiver  goto 90
	Constant  goto 91
	ArrayConstant  goto 92
	ExprList  goto 153


state 106
	Expr : READ_INTEGER '(' . ')'  (80)

	')'  shift 154
	.  error


state 107
	Expr : READ_LINE '(' . ')'  (81)

	')'  shift 155
	.  error


state 108
	Expr : INSTANCEOF '(' . Expr ',' IDENTIFIER ')'  (85)
	Receiver : .  (56)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	VAR  shift 62
	READ_INTEGER  shift 65
	READ_LINE  shift 66
	LITERAL  shift 67
	INSTANCEOF  shift 68
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	'['  shift 72
	IDENTIFIER  reduce 56

	Expr  goto 156
	LValue  goto 98
	Call  goto 99
	Receiver  goto 90
	Constant  goto 91
	ArrayConstant  goto 92


state 109
	Receiver : Expr . '.'  (55)
	LValue : Expr . '[' Expr ']'  (59)
	Expr : Expr . '+' Expr  (64)
	Expr : Expr . '-' Expr  (65)
	Expr : Expr . '*' Expr  (66)
	Expr : Expr . '/' Expr  (67)
	Expr : Expr . '%' Expr  (68)
	Expr : Expr . EQUAL Expr  (69)
	Expr : Expr . NOT_EQUAL Expr  (70)
	Expr : Expr . '<' Expr  (71)
	Expr : Expr . '>' Expr  (72)
	Expr : Expr . LESS_EQUAL Expr  (73)
	Expr : Expr . GREATER_EQUAL Expr  (74)
	Expr : Expr . AND Expr  (75)
	Expr : Expr . OR Expr  (76)
	Expr : '-' Expr .  (78)
	Expr : Expr . REPEAT Expr  (87)
	Expr : Expr . CONCAT Expr  (88)
	Expr : Expr . '[' Expr ']' DEFAULT Expr  (90)
	Expr : Expr . '[' Expr ':' Expr ']'  (91)

	'.'  shift 137
	'['  shift 138
	WHILE  reduce 78
	FOR  reduce 78
	IF  reduce 78
	REPEAT  reduce 78
	CONCAT  reduce 78
	AND  reduce 78
	OR  reduce 78
	LESS_EQUAL  reduce 78
	GREATER_EQUAL  reduce 78
	EQUAL  reduce 78
	NOT_EQUAL  reduce 78
	'+'  reduce 78
	'-'  reduce 78
	'*'  reduce 78
	'/'  reduce 78
	'%'  reduce 78
	'>'  reduce 78
	'<'  reduce 78
	','  reduce 78
	';'  reduce 78
	')'  reduce 78
	']'  reduce 78
	':'  reduce 78


state 110
	Receiver : Expr . '.'  (55)
	LValue : Expr . '[' Expr ']'  (59)
	Expr : Expr . '+' Expr  (64)
	Expr : Expr . '-' Expr  (65)
	Expr : Expr . '*' Expr  (66)
	Expr : Expr . '/' Expr  (67)
	Expr : Expr . '%' Expr  (68)
	Expr : Expr . EQUAL Expr  (69)
	Expr : Expr . NOT_EQUAL Expr  (70)
	Expr : Expr . '<' Expr  (71)
	Expr : Expr . '>' Expr  (72)
	Expr : Expr . LESS_EQUAL Expr  (73)
	Expr : Expr . GREATER_EQUAL Expr  (74)
	Expr : Expr . AND Expr  (75)
	Expr : Expr . OR Expr  (76)
	Expr : '!' Expr .  (79)
	Expr : Expr . REPEAT Expr  (87)
	Expr : Expr . CONCAT Expr  (88)
	Expr : Expr . '[' Expr ']' DEFAULT Expr  (90)
	Expr : Expr . '[' Expr ':' Expr ']'  (91)
